--- a/filter.css
+++ b/filter.css
@@ -58,7 +58,18 @@
 	width: 100%;
 	border-bottom: solid 1px #d5dae0;
 	background-color: #fff;
-	padding: 0.5rem 0;
+	height: 60px;
+	position: relative;
+}
+
+#tagsBar:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    width: 3%;
+    height: 100%;
+    background: linear-gradient(90deg, rgb(255 255 255 / 42%) 0%, rgb(255 255 255) 100%);
 }
 
 #tagsBar .clearFilter{
@@ -69,15 +80,38 @@
     border-radius: 0;
     padding: 0;
     margin-right: 1.5rem;
+    white-space: nowrap;
 }
 
 #tagsBar.active {
 	display: flex;
 }
 
+
+
+
+
+
 #boxTags{
     overflow-x: auto;
+	position: relative;
 }
+
+#boxTags::-webkit-scrollbar {
+  height: 0.5em;
+}
+
+#boxTags::-webkit-scrollbar-thumb {
+	background: #d5dae0;
+	border :none;
+	border-radius: 10px;
+}
+
+#boxTags::-webkit-scrollbar-track {
+    background-color: #fff;
+}
+
+
 
 #boxTags > div {
     display: flex;
@@ -198,15 +232,24 @@
 }
 
 #filterBox input:checked + p:after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 12px;
+    height: 12px;
+    transform: translate(50%, 50%);
     background-color: #d5dae0;
     border-radius: 100%;
-    content: "";
-    height: 12px;
-    left: 7px;
-    position: absolute;
-    top: 6px;
-    width: 12px;
 }
+
+
+
+
+
+
+
+
 
 
 
@@ -390,8 +433,6 @@ html {
 
 #containerShop .display_grid {
 	gap: 7em 7vw;
-	margin-top: 3.5em;
-	padding-bottom: 4em;
 }
 
 /******* DISPLAY GRID- *******/
