--- a/filter.css
+++ b/filter.css
@@ -5,7 +5,7 @@
 	border-top: none;
 	z-index: 99;
 	/*position the autocomplete items to be the same width as the container:*/
-	top: 100%;
+	top: 127%;
 	left: 0;
 	right: 0;
 }
@@ -24,8 +24,7 @@
 
 /*when navigating through the items using the arrow keys:*/
 .autocomplete-active {
-	background-color: DodgerBlue !important;
-	color: #ffffff;
+	background-color: #f9f9fb !important;
 }
 
 
@@ -153,10 +152,13 @@
 	height: 50px;
 	background-color: #fff;
 	z-index: 11;
+	position: relative;
 }
 
+
+
 .stickyFilterBar {
-	position: sticky;
+	position: sticky !important;
 	top: 100px;
 }
 
@@ -261,6 +263,9 @@
     border: 2px solid transparent;
     border-radius: 3em;
     padding: 0 1em;
+    z-index: 10;
+    background-color: #fff;
+    transition: opacity .1s ease-in-out;
 }
 
 #searchBar.focus {
@@ -277,6 +282,7 @@
     border: none;
     background-color: #fff;
     padding: 7px 10px 6px;
+    width: max(18vw, 15em);
 }
 
 #searchBar input::placeholder {
@@ -284,6 +290,29 @@
 	font-size: 1em;
 	letter-spacing: 0.05em;
 }
+
+#overlayFilter {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 9;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: block;
+    transition: opacity .1s ease-in-out;
+}
+
+#overlayFilter.active{
+    visibility: visible;
+    opacity: 1;
+}
+
+
+
+
 
 #containerShop {
 	transition: width .3s ease-in-out;
