--- a/filter.css
+++ b/filter.css
@@ -55,7 +55,7 @@
 #tagsBar {
 	display: none;
 	width: 100%;
-	border-bottom: solid 1px #d5dae0;
+	border-bottom: solid 1px #d5dae09c;
 	background-color: #fff;
 	height: 60px;
 	position: relative;
@@ -77,12 +77,14 @@
 }
 
 #tagsBar .clearFilter{
-    background-color: #fff;
+      background-color: #fff;
     color: #2f294b;
     border: none;
-    border-bottom: 1px solid #2f294b;
+    border-bottom: 1px solid #2f284b;
     border-radius: 0;
     padding: 0;
+    letter-spacing: 0.05em;
+    font-size: 0.9em;
     margin-right: 1.5rem;
     white-space: nowrap;
 }
@@ -133,6 +135,7 @@
 	text-transform: uppercase;
 	font-size: 0.8em;
 	white-space: nowrap;
+	letter-spacing: 0.1em;
 }
 
 #boxTags>div span {
@@ -148,7 +151,7 @@
 
 #filterBar {
 	width: 100%;
-	border-bottom: solid 1px #d5dae0;
+	border-bottom: solid 1px #d5dae09c;
 	height: 50px;
 	background-color: #fff;
 	z-index: 11;
@@ -166,7 +169,7 @@
 	/*width: 25%;*/
 	height: 100%;
 	padding: 0 2.5rem;
-	border-right: solid 1px #d5dae0;
+	border-right: solid 1px #d5dae09c;
 }
 
 #filterIcon {
@@ -189,11 +192,9 @@
 
 #filterBox.active {
 	transform: translateX(0);
-	padding-left: 20px;
-	padding-right: 20px;
 	width: 25%;
 	overflow: auto;
-	border-right: solid 1px #d5dae0;
+	border-right: solid 1px #d5dae09c;
 }
 
 .stickyFilterBox {
@@ -329,9 +330,41 @@
 }
 
 
-.filterSection,
+#state1_filter{
+    padding: 0 20px !important;
+    transition: all .3s ease-in-out;
+}
+
+#state1_filter.tabActive{
+    transform: translateX(-100%);
+}
+
+#filterBox ul > li,
 #head_fBox {
-	border-bottom: 1px solid #dfdfe1;
+	border-bottom: 1px solid #d5dae09c;
+}
+
+.filterSection li{
+    border: none !important;
+}
+
+
+#state1_filter > li > ul{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+    background-color: #fff;
+    transform: translateX(100%);
+    display: none;
+}
+
+.head_state2 span{
+    border: 1px solid #d5dae09c; 
+    border-radius: 1rem;
+    cursor: pointer;
 }
 
 .filterSection ul {
@@ -345,12 +378,12 @@
 	max-height: 100vh;
 }
 
-.filterSection>p,
+#state1_filter li > p,
 #head_fBox {
 	padding: 1.5rem 0 1.2rem;
 }
 
-.filterSection>p:after,
+#state1_filter li:not(.head_state2) > p:after,
 #filterBtn:after {
 	content: url(https://monatglobal.com/wp-content/uploads/2022/08/dropdown-arrow.svg);
 	width: 1rem;
@@ -360,6 +393,8 @@
 	margin-top: -2px;
 }
 
+
+#state1_filter > li > p:after,
 #filterBtn:after {
 	transform: rotate(-90deg);
 }
@@ -579,8 +614,8 @@ html {
 	justify-content: end;
 	align-content: stretch;
     padding: 3.5rem 3vw;
-    border-bottom: solid 1px #d5dae0;
-    border-right: solid 1px #d5dae0;
+    border-bottom: solid 1px #d5dae09c;
+    border-right: solid 1px #d5dae09c;
 }
 
 .card_product:hover {
@@ -621,7 +656,7 @@ html {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: #f9f9fb9c;
+    background-color: #f9f9fcf0;
     backdrop-filter: blur(1.5px);
     visibility: hidden;
     opacity: 0;
@@ -631,6 +666,7 @@ html {
     flex-direction: column;
     align-items: end;
     padding: 20px 40px;
+    cursor: pointer;
 }
 
 .infoCard.active{
@@ -638,27 +674,18 @@ html {
     opacity: 1;
 }
 
-/*.infoCard p {*/
-/*    margin: 0;*/
-/*    background-color: #ffffff;*/
-/*    border: 1px solid #eeeeee;*/
-/*    border-radius: 3px;*/
-/*    font-size: 0.75em;*/
-/*    letter-spacing: 0.1em;*/
-/*    width: fit-content;*/
-/*    padding: 0.5rem 1rem 0.4rem;*/
-/*    text-transform: uppercase;*/
-/*    margin-bottom: 0.3rem;*/
-/*}*/
-
 .infoCard p {
     font-family: 'SuisseIntl-Regular';
-    font-size: 0.85em;
-    letter-spacing: 0.11em;
+    font-size: 0.8em;
+    background: white;
+    padding: 0.2em 0.6em;
+    border-radius: 3px;
+    letter-spacing: 0.09em;
     width: fit-content;
     text-transform: uppercase;
-    margin-bottom: 1rem;
-    opacity: 0.6;
+    margin-bottom: 0.2rem;
+    opacity: 0.4;
+    cursor: auto;
 }
 
 #allPBox .infoCard p {
@@ -717,9 +744,14 @@ html {
 }
 
 .vip_price {
-	color: #5456c4;
-	font-family: 'SuisseIntl-Regular', Fallback, sans-serif !important;
-	font-size: 0.9em;
+color: #5456C4;
+    font-family: 'SuisseIntl-Regular', Fallback, sans-serif !important;
+    font-size: 0.9em;
+    border: solid 1px #D5D5F1;
+    border-radius: 3px;
+    margin-left: 0.5em;
+    padding: 0.2em 0.5em;
+    background: #e1e1f442;
 }
 
 .clasic_btn_MONAT {
