--- a/filter.css
+++ b/filter.css
@@ -456,13 +456,27 @@
     transition: width .3s ease-in-out;
 }
 
-#state1_filter{
+#filterBox > ul{
     padding: 0 2.5rem !important;
     transition: all .3s ease-in-out;
 }
+/*#state1_filter{*/
+/*    padding: 0 2.5rem !important;*/
+/*    transition: all .3s ease-in-out;*/
+/*}*/
 
 #state1_filter.tabActive{
     transform: translateX(-100%);
+}
+
+#seeAllBtn {
+    cursor: pointer;
+    border: none !important;
+    padding: 1.7rem 0;
+    color: #2f294b;
+    font-family: 'SuisseIntl-Medium';
+    letter-spacing: 0.08em;
+    font-size: 0.85em;
 }
 
 .closeFilter{
@@ -513,6 +527,16 @@
 	max-height: 100vh;
 }
 
+/*#filterBox > ul li,*/
+/*#head_fBox {*/
+/*	padding: 1.7rem 0;*/
+/*}*/
+/*#filterBox > ul li > p,*/
+/*#head_fBox {*/
+/*	padding: 1.7rem 0;*/
+/*}*/
+
+
 #state1_filter li > p,
 #head_fBox {
 	padding: 1.7rem 0;
@@ -523,7 +547,7 @@
     padding-right: 20px;
 }
 
-#state1_filter li:not(.head_state2) > p:after,
+#state1_filter li:not(.head_state2):not(.not_a_tab) > p:after,
 #filterBtn:after,
 #orderBy > p:after{
 	content: url(https://monatglobal.com/wp-content/uploads/2022/08/dropdown-arrow.svg);
@@ -933,4 +957,4 @@ color: #5456C4;
 		#filterBtn.active {
 	    width: 50%;
     }
-}  
+}   
