--- a/filter.css
+++ b/filter.css
@@ -239,7 +239,8 @@
     padding: 0.4em 0.35em 0.35em 0.37em;
 }
 
-#tagsBar {
+#tagsBar,
+#clearSearchBar{
 	display: none;
 	width: 100%;
 	border-bottom: solid 1px #d5dae09c;
@@ -262,7 +263,7 @@
     background: linear-gradient(90deg, rgb(255 255 255 / 42%) 0%, rgb(255 255 255) 100%);
 }
 
-#tagsBar .clearFilter{
+.clearBtn{
       background-color: #fff;
     color: #2f294b;
     border: none;
@@ -275,7 +276,8 @@
     white-space: nowrap;
 }
 
-#tagsBar.active {
+#tagsBar.active,
+#clearSearchBar.active{
 	display: flex;
 }
 
@@ -309,7 +311,7 @@
     letter-spacing: 0.14em;
 }
 
-#btns_FMob .clearFilter{
+#btns_FMob .clearBtn{
     background-color: #fff;
     color: #1C1932;
 }
@@ -957,4 +959,4 @@ color: #5456C4;
 		#filterBtn.active {
 	    width: 50%;
     }
-}   
+}    
