--- a/filter.css
+++ b/filter.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 /* - search bar */
 
 #searchBar {
@@ -239,7 +243,8 @@
     padding: 0.4em 0.35em 0.35em 0.37em;
 }
 
-#tagsBar {
+#tagsBar,
+#clearSearchBar{
 	display: none;
 	width: 100%;
 	border-bottom: solid 1px #d5dae09c;
@@ -262,7 +267,7 @@
     background: linear-gradient(90deg, rgb(255 255 255 / 42%) 0%, rgb(255 255 255) 100%);
 }
 
-#tagsBar .clearFilter{
+.clearBtn{
       background-color: #fff;
     color: #2f294b;
     border: none;
@@ -275,7 +280,8 @@
     white-space: nowrap;
 }
 
-#tagsBar.active {
+#tagsBar.active,
+#clearSearchBar.active{
 	display: flex;
 }
 
@@ -309,7 +315,7 @@
     letter-spacing: 0.14em;
 }
 
-#btns_FMob .clearFilter{
+#btns_FMob .clearBtn{
     background-color: #fff;
     color: #1C1932;
 }
@@ -456,13 +462,27 @@
     transition: width .3s ease-in-out;
 }
 
-#state1_filter{
+#filterBox > ul{
     padding: 0 2.5rem !important;
     transition: all .3s ease-in-out;
 }
+/*#state1_filter{*/
+/*    padding: 0 2.5rem !important;*/
+/*    transition: all .3s ease-in-out;*/
+/*}*/
 
 #state1_filter.tabActive{
     transform: translateX(-100%);
+}
+
+#seeAllBtn {
+    cursor: pointer;
+    border: none !important;
+    padding: 1.7rem 0;
+    color: #2f294b;
+    font-family: 'SuisseIntl-Medium';
+    letter-spacing: 0.08em;
+    font-size: 0.85em;
 }
 
 .closeFilter{
@@ -490,7 +510,11 @@
     display: none;
 }
 
-.head_state2 span {
+.productsLine_count{
+    font-family: "SuisseIntl-Light";
+}
+
+.head_state2 > span {
     border: 1px solid #d5dae09c;
     border-radius: 2rem;
     cursor: pointer;
@@ -498,7 +522,7 @@
     transition: all .3s ease-in-out;
 }
 
-.head_state2 span:hover {
+.head_state2 > span:hover {
     background-color: #d5dae09c;
 }
 
@@ -513,6 +537,16 @@
 	max-height: 100vh;
 }
 
+/*#filterBox > ul li,*/
+/*#head_fBox {*/
+/*	padding: 1.7rem 0;*/
+/*}*/
+/*#filterBox > ul li > p,*/
+/*#head_fBox {*/
+/*	padding: 1.7rem 0;*/
+/*}*/
+
+
 #state1_filter li > p,
 #head_fBox {
 	padding: 1.7rem 0;
@@ -523,7 +557,7 @@
     padding-right: 20px;
 }
 
-#state1_filter li:not(.head_state2) > p:after,
+#state1_filter li:not(.head_state2):not(.not_a_tab) > p:after,
 #filterBtn:after,
 #orderBy > p:after{
 	content: url(https://monatglobal.com/wp-content/uploads/2022/08/dropdown-arrow.svg);
@@ -779,7 +813,7 @@
 	font-family: 'SuisseIntl-Light', Fallback, sans-serif !important;
 	letter-spacing: 1.5px;
 	text-align: center;
-	padding: 1.4em 0;
+	/*padding: 1.4em 0;*/
 	color: #2f294b;
 	font-size: 0.8em;
 	text-transform: uppercase;
@@ -851,9 +885,9 @@ color: #5456C4;
 		background-image: url('https://monatglobal.com/wp-content/uploads/2022/07/Systems-Web-Banner-Mobile.jpg');
 	}
 	
-	.card_content{
-	    padding: 2rem 3vw 8rem;
-	}
+    .card_content {
+        padding: 2rem 3vw 7rem;
+    }
 	
 	#filterBox #boxTags {
 		margin-top: 20px;
@@ -933,4 +967,4 @@ color: #5456C4;
 		#filterBtn.active {
 	    width: 50%;
     }
-}  
+}    
